--- a/package.json
+++ b/package.json
@@ -13,16 +13,23 @@
     "@emotion/styled": "^11.10.6",
     "@mui/icons-material": "^5.11.11",
     "@mui/material": "^5.11.13",
+    "axios": "^1.3.4",
+    "meta-fetcher": "^3.1.1",
+    "module-alias": "^2.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "react-router-dom": "^6.9.0",
+    "react-toastify": "^9.1.2",
     "styled-components": "^5.3.9"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "@types/react-helmet": "^6.1.6",
     "@types/styled-components": "^5.1.26",
     "@vitejs/plugin-react": "^3.1.0",
+    "react-transition-group": "^4.4.5",
     "typescript": "^4.9.3",
     "vite": "^4.2.0"
   }
