--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "projeto21-autoral",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "dependencies": {
     "@emotion/react": "^11.10.6",
@@ -20,17 +20,25 @@
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-router-dom": "^6.9.0",
+    "react-scripts": "^5.0.1",
     "react-toastify": "^9.1.2",
     "styled-components": "^5.3.9"
   },
   "devDependencies": {
-    "@types/react": "^18.0.28",
-    "@types/react-dom": "^18.0.11",
-    "@types/react-helmet": "^6.1.6",
-    "@types/styled-components": "^5.1.26",
     "@vitejs/plugin-react": "^3.1.0",
     "react-transition-group": "^4.4.5",
-    "typescript": "^4.9.3",
     "vite": "^4.2.0"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
