--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/lab": "^5.0.0-alpha.126",
     "@mui/material": "^5.11.13",
     "axios": "^1.3.4",
+    "jsonwebtoken": "^9.0.0",
     "meta-fetcher": "^3.1.1",
     "module-alias": "^2.2.2",
     "react": "^18.2.0",
