--- a/front-end/.env
+++ b/front-end/.env
@@ -1,1 +1,1 @@
-REACT_APP_BACK_END_URL=http://ec2-34-203-243-51.compute-1.amazonaws.com:5000
+REACT_APP_BACK_END_URL=http://ec2-34-203-243-51.compute-1.amazonaws.com:80/api
