--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-# REACT_APP_BACK_END_URL=https://mylinks-59u7.onrender.com  
-REACT_APP_BACK_END_URL=http://localhost:5000
+REACT_APP_BACK_END_URL=https://mylinks-59u7.onrender.com  
+# REACT_APP_BACK_END_URL=http://localhost:5000  
